--- a/moduli12/index.html
+++ b/moduli12/index.html
@@ -13,12 +13,19 @@
 <body>
     <h1>digital school</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+    <p class="test">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
         <ipsa>Nostrum voluptatum nesciunt illum eligendi quaerat accusamus, optio ipsa dolor cupiditate odit, odio numquam sint
          modi officia consequatur doloremque totam? Sed, consequatur.</ipsa></p>
 
          <h2>blah</h2>
          <h3>blah</h3>
          <h4>blah</h4>
+
+    <p id="qwerty">Lorem, ipsum dolor 
+        sit a
+        met consectetur adipisicing elit. Explicabo, ut. Tenetur
+         architecto consequatur deleniti ut vitae autem id reici
+        endis ex aliquam ulla
+        . Deserunt cumque hic velit, fugiat animi aut in!</p>
 </body>
 </html>
