--- a/moduli14/index.html
+++ b/moduli14/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Lesson 15 </title>
-	<link rel="stylesheet" type="text/css" href="style/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Moduli14</title>
 </head>
+
+
 <body>
+    <article>
+        <p>Paragraph 1 in the article.</p>
+        <p>Paragraph 2 in the article.</p>
+        <div><p>Paragraph 3 in the article.</p></div>
 
-<div id="static">This div has a static position</div>
-<div id="relative">This div has a relatiiv position</div>
-<div id="fixed">This div has a fixed position</div>
-<div id="parent">
+    </article>
 
-<div id="absolute">this is absolute</div>
+    <p>Paragraph 4 outside the article</p>
+    <p>Paragraph 5 outside the article</p>
 
-</div>
-
-
-
-
+    <h3>Heading1</h3>
+    <h3>Heading2</h3>
+    <h3>Heading3</h3>
+    <h3>Heading4</h3>
+    <h3>Heading5</h3>
 
 
+    <form>
+        <label for="name">Name:</label>
+        <input id="form" type="text" name="name", required>
+    </form>
 
+    <form>
+        <label for="score">SCORE:</label>
+        <input type="number", max="100", min="1">
+    </form>
 
+    <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+         ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+          not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
+          the 1960s with the release of Letraset sheets containing  Lorem Ipsum passages, and more recently with desktop publishing software
+           like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
 </body>
 </html>
