--- a/moduli4/index.html
+++ b/moduli4/index.html
@@ -26,14 +26,14 @@
  unde magni sequi est natus deleniti nobis  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis laudantium, optio quas suscipit expedita iusto dolores at labore ab quaerat, libero voluptatem ipsum, molestias
   similique et earum cupiditate qui voluptate?et!</p>
 
-  <h1 id="heading_2">Heading1</h1>
+  <h1 id="heading_">Heading1</h1>
   <img src="images/1.png">
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea deserunt, officiis adipisci rerum voluptatum obcaecati quam cum autem nostrum eveniet reiciendis
   vero tempore sequi magnam fugit dicta laborum earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cum aliquam ab, consequuntur corrupti quia tenetur excepturi voluptates a sint totam quos 
   unde magni sequi est natus deleniti nobis  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis laudantium, optio quas suscipit expedita iusto dolores at labore ab quaerat, libero voluptatem ipsum, molestias
    similique et earum cupiditate qui voluptate?et!</p>
 
-   <h1 id="heading_3">Heading</h1>
+   <h1 id="heading_2">Heading1</h1>
    <img src="images/1.png">
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea deserunt, officiis adipisci rerum voluptatum obcaecati quam cum autem nostrum eveniet reiciendis
    vero tempore sequi magnam fugit dicta laborum earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cum aliquam ab, consequuntur corrupti quia tenetur excepturi voluptates a sint totam quos 
