--- a/projekt personal/about.html
+++ b/projekt personal/about.html
@@ -18,6 +18,33 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
+
+          <main>
+
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia fugit incidunt eum itaque,<br> 
+            praesentium, commodi ut omnis obcaecati vitae esse ea mollitia, ad minus unde voluptate accusamus<br> 
+             a amet modi placeat illum nesciunt? Est, ipsum tempora recusandae obcaecati totam quae alias aperiam<br> 
+              deserunt dolor repudiandae eum? Blanditiis, similique vel. Iste sapiente explicabo numquam, pariatur, <br> 
+              ipsum aperiam, et nisi ullam deleniti aspernatur placeat sunt dolorum! Quo, velit? Illum, distinctio,<br> 
+               deleniti nobis soluta commodi atque explicabo facilis cupiditate, molestiae nihil perferendis quae.<br> 
+               Quos id praesentium saepe accusamus deserunt incidunt perspiciatis, deleniti porro, laborum<br> 
+             consequuntur, odio quam error reprehenderit culpa? Qui, animi consequatur?<br> 
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia fugit incidunt eum itaque,<br> 
+            praesentium, commodi ut omnis obcaecati vitae esse ea mollitia, ad minus unde voluptate accusamus<br> 
+             a amet modi placeat illum nesciunt? Est, ipsum tempora recusandae obcaecati totam quae alias aperiam<br> 
+              deserunt dolor repudiandae eum? Blanditiis, similique vel. Iste sapiente explicabo numquam, pariatur, <br> 
+              ipsum aperiam, et nisi ullam deleniti aspernatur placeat sunt dolorum! Quo, velit? Illum, distinctio,<br> 
+               deleniti nobis soluta commodi atque explicabo facilis cupiditate, molestiae nihil perferendis quae.<br> 
+               Quos id praesentium saepe accusamus deserunt incidunt perspiciatis, deleniti porro, laborum<br> 
+               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia fugit incidunt eum itaque,<br> 
+            praesentium, commodi ut omnis obcaecati vitae esse ea mollitia, ad minus unde voluptate accusamus<br> 
+             a amet modi placeat illum nesciunt? Est, ipsum tempora recusandae obcaecati totam quae alias aperiam<br> 
+              deserunt dolor repudiandae eum? Blanditiis, similique vel. Iste sapiente explicabo numquam, pariatur, <br> 
+              ipsum aperiam, et nisi ullam deleniti aspernatur placeat sunt dolorum! Quo, velit? Illum, distinctio,<br> 
+               deleniti nobis soluta commodi atque explicabo facilis cupiditate, molestiae nihil perferendis quae.<br> 
+               Quos id praesentium saepe accusamus deserunt incidunt perspiciatis, deleniti porro, laborum<br> </p>
+
+               </main>
     </nav>
     <img src="qdTjtV.jpg">
     
