--- a/projekt personal/courses.html
+++ b/projekt personal/courses.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     
+
     <h1>Rock Basketball</h1>
     <h2>club!</h2>
 
@@ -19,6 +20,46 @@
             <li><a href="about.html">About</a></li>
           </ul>
     </nav>
+  <div class="card" role="region" aria-label="Courses table">
+    <div class="card-header">
+      <div class="title">Training Courses</div>
+    </div>
+
+    <div class="table-wrap">
+      <table>
+        <thead>
+          <tr>
+            <th>Course</th>
+            <th>Monthly Price</th>
+            <th>Sessions per week</th>
+            <th>Session Duration</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Course 1</td>
+            <td class="price">€20</td>
+            <td>2 times weekly</td>
+            <td>—</td>
+          </tr>
+          <tr>
+            <td>Course 2</td>
+            <td class="price">€30</td>
+            <td>4 times weekly</td>
+            <td>1 hour</td>
+          </tr>
+          <tr>
+            <td>Course 3</td>
+            <td class="price">€40</td>
+            <td>4 days weekly</td>
+            <td>1 hour 30 minutes</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+    <table><li></li></table>
     <img src="qdTjtV.jpg">
     
 </body>
