--- a/projekt personal/index.html
+++ b/projekt personal/index.html
@@ -1,51 +1,58 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Rock Basketball</title>
+  <meta charset="UTF-8">
+  <title>Rock Basketball</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <h1>Rock Basketball</h1>
-    <h2>club!</h2>
-
-    <nav>
+  <nav class="navbar">
+    <div class="logo">Rock Basketball</div>
+    <ul class="nav-left">
+            <img class="image" src="Screenshot 2025-09-18 221729.png" height="115" width="115" alt="Center Image" class="nav-center">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-    </nav>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br>
-        Tenetur mollitia cum maiores, nobis, sint fuga voluptas vel<br>
-         enim vero iure eaque expedita velit nulla culpa pariatur dolore.<br>
-          Dignissimos sint explicabo itaque expedita aliquid aperiam mollitia<br>
-          rerum, inventore nulla ipsum beatae qui, earum voluptate illo sit dolor?<br>
-           Rem reiciendis placeat ad magni facere sint modi ipsum, recusandae, est<br>
-            mollitia quod expedita veniam porro quibusdam obcaecati? Repellat dolorem<br>
-             at dignissimos ea mollitia doloremque ipsa distinctio, harum officiis<br>
-              blanditiis sint laudantium recusandae cum, earum, sed vero in ipsam qui<br> 
-              necessitatibus! Accusamus maiores aliquam commodi perferendis<br>
-        impedit quibusdam. Officia enim quisquam delectus praesentium ad!</p>
-    <img src="qdTjtV.jpg" width="420" height="580">   
-         <footer><p>Lorem ipsum dolor sit amet consectetur adipisicing jfhsdjifdhsf dhsfhsfhsdfh<br>
-             elit. Illo neque facilis nesciunt sequi<br>
-              magni, fugit aliquam amet ipsa vel temporibus<br>
-             consequuntur cumque nam quis atque beatae pariatur<br>
-              vero reiciendis at.
-              Lorem ipsum dolor sit amet consectetur adipisicing <br>
-              elit. Illo neque facilis nesciunt sequi<br>
-               magni, fugit aliquam amet ipsa vel temporibus<br>
-              consequuntur cumque nam quis atque beatae pariatur<br>
-               vero reiciendis at.
-               Lorem ipsum dolor sit amet consectetur adipisicing <br>
-               elit. Illo neque facilis nesciunt sequi<br>
-                magni, fugit aliquam amet ipsa vel temporibus<br>
-               consequuntur cumque nam quis atque beatae pariatur<br>
-                vero reiciendis at.</p></footer>
-               
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Courses</a></li>
+      <li><a href="#">Contacts</a></li>
+    </ul>
+  </nav>
+ <div class="glow-bar"></div>
+  <div class="paragraphs">
+  <p class="left">We are the best basketball team in the league, dominating every match with skill and teamwork.<br>
+Our players constantly improve through<br> hard work and dedication, mastering both offense and defense.<br>
+We lead not only in stats but<br> also in learning, strategy, and sportsmanship.<br>
+Joining us means being part of a team that values growth, passion, and winning together!</p>
+   <div class="glow-bar"></div>
+  <p class="right">
+We have trained and guided players who went on to become NBA stars, including Shai Gilgeous-Alexander.<br> 
+Our coaching focuses on developing talent, discipline,<br> and game intelligence from a young age.<br> 
+Every player who joins our program receives<br> personalized training to maximize their skills and potential.<br> 
+With dedication and hard work, we turn passionate athletes into professional-level basketball players!</p>
+   <div class="glow-bar"></div>
+  <p class="left">
+We are also a great team because we consistently rank at the top of the league in every age group.<br> 
+Our success comes from dedication, teamwork,<br> and a focus on developing each players skills.<br> 
+We celebrate victories while always<br> striving to improve and set new records.<br> 
+Being part of our team means joining a winning culture where passion, effort, and excellence come first!</p>
+</div>
+   <div class="glow-bar"></div>
+
+<img src="jordan-logo-brand-symbol-design-clothes-sportwear-illustration-with-red-background-free-vector.jpg" height="350" width="350" alt="Center Image">
+
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-left">
+      <p>&copy; 2025 Rock Basketball. All rights reserved.<br>
+                             JOIN!<br>🏀🔥💪🌐</p>
+
+    </div>
+     <img class="image" src="Screenshot 2025-09-18 221729.png" height="115" width="115" alt="Center Image" class="nav-center">
+    <div class="footer-right">
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms</a>
+      <a href="#">Contact</a>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
