--- a/projekt personal/index.html
+++ b/projekt personal/index.html
@@ -3,6 +3,11 @@
   <meta charset="UTF-8">
   <title>Rock Basketball</title>
   <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Limelight&family=Orbitron:wght@400..900&family=Titan+One&display=swap" rel="stylesheet">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <nav class="navbar">
@@ -13,7 +18,6 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Courses</a></li>
-      <li><a href="#">Contacts</a></li>
     </ul>
   </nav>
  <div class="glow-bar"></div>
@@ -38,6 +42,39 @@ Being part of our team means joining a winning culture where passion, effort, an
    <div class="glow-bar"></div>
 
 <img src="jordan-logo-brand-symbol-design-clothes-sportwear-illustration-with-red-background-free-vector.jpg" height="350" width="350" alt="Center Image">
+
+<div class="glow-bar"></div>
+
+<section class="stats">
+  <div class="stat">
+    <h2>Happy Applicants</h2>
+    <h3><span class="count">150K+</span></h3>
+  </div>
+  <div class="stat">
+    <h2>Players Worldwide</h2>
+    <h3><span class="count">200K+</span></h3>
+  </div>
+  <div class="stat">
+    <h2>Players Turned Into NBA Players</h2>
+    <h3><span class="count">50K+</span></h3>
+  </div>
+</section>
+<div class="glow-bar"></div>
+
+<section class="specialties">
+  <h2>We specialize in</h2>
+  <div class="boxes-container">
+    <div class="box">Handling</div>
+    <div class="box">Shooting</div>
+    <div class="box">Passing</div>
+    <div class="box">Physical</div>
+    <div class="box">Teamwork</div>
+    <div class="box">Scoring</div>
+  </div>
+</section>
+
+<div class="glow-bar"></div>
+
 
 <footer class="footer">
   <div class="footer-container">
