--- a/projekt personal/index.html
+++ b/projekt personal/index.html
@@ -15,9 +15,9 @@
     <ul class="nav-left">
             <img class="image" src="Screenshot 2025-09-18 221729.png" height="115" width="115" alt="Center Image" class="nav-center">
         <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Courses</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="courses.html">Courses</a></li>
     </ul>
   </nav>
  <div class="glow-bar"></div>
