--- a/menu/index.html
+++ b/menu/index.html
@@ -9,7 +9,7 @@
 <body>
     
 <nav>
-    <img src="" style="width: 60px; height: 60px;">
+    <img src="img/digitalschool.jpg" style="width: 60px; height: 60px;">
     <div id="mylinks">
         <a href="#news">News</a>
         <a href="#contact">contact</a>
@@ -19,6 +19,8 @@
         <i class="fa fa-bars"></i>
     </button>
 </nav>
+
+
 
 
 <script src="main.js"></script>
